# Eazure

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
