[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Eazure"
version = "0.1"
description = "Your package description"  # Add your package description here
readme = "README.md"  # Ensure this points to your actual README file
authors = ["Your Name <your.email@example.com>"]  # Replace with your name and email

[project.dependencies]
azure-storage-blob = ">=12.8.1"
azure-core = ">=1.29.5"
azure-data-tables = ">=12.4.4"
azure-storage-queue = ">=12.7.3"

[metadata]
long_description_content_type = "text/markdown"