[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Eazure"
version = "0.1"
description = "Eazure: A package providing easier access to Azure storage, tables, and queue functions."
readme = "README.md"
authors = [{name = "SaaS Technologies LLC", email = "newsaastechnologies@gmail.com"}]

[project.dependencies]
azure-storage-blob = ">=12.8.1"
azure-core = ">=1.29.5"
azure-data-tables = ">=12.4.4"
azure-storage-queue = ">=12.7.3"

[metadata]
long_description_content_type = "text/markdown"