[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Eazure"
version = "0.1"
description = "Eazure: A package providing easier access to Azure storage, tables, and queue functions."
readme = "README.md"
authors = [{name = "SaaS Technologies LLC", email = "newsaastechnologies@gmail.com"}]
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}

[project.dependencies]
azure-storage-blob = ">=12.8.1"
azure-core = ">=1.9.0"
azure-data-tables = ">=12.0.0"
azure-storage-queue = ">=12.1.5"

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/SaaS-Technologies-LLC/Eazure"
"Bug Reports" = "https://github.com/SaaS-Technologies-LLC/Eazure/issues"
"Source" = "https://github.com/SaaS-Technologies-LLC/Eazure/"

[project.scripts]

[tool.setuptools]
package-data = {"Eazure" = ["*.dat"]}

[metadata]
long_description_content_type = "text/markdown"